Adjusting issues in footer, especially re webmentions on mobile.

--- a/src/assets/scss/ofotigrid/_darkmode.scss
+++ b/src/assets/scss/ofotigrid/_darkmode.scss
@@ -52,6 +52,13 @@
     }
   }
 
+  footer {
+    background: linear-gradient(
+      rgba(0, 0, 0, 0.0),
+      rgba(5, 0, 169, 1.00)
+    );  
+  }
+
   code {
     background: $code-bkgd-dark-mode;
   }
