--- a/src/assets/scss/ofotigrid/_layout.scss
+++ b/src/assets/scss/ofotigrid/_layout.scss
@@ -32,13 +32,12 @@
 
 footer {
   margin: 4em auto 0 auto; // top margin keeps "Comments" item from infringing on this in small-device view
-  width: 90%;
+  width: 100%;
+  padding-top: 0.5em;
   padding-bottom: 0.5em;
-  padding-bottom: 0.5rem;
   @media (min-width: 900px) {
     margin: 2em auto 0 auto;
     padding-bottom: 1em;
-    width: 85%;
   }
 }
 
@@ -71,10 +70,6 @@ h3.twitter-border {
   a {
     border-bottom: 0;
   }
-}
-
-.twitter-timeline {
-	width: 100vw !important;
 }
 
 .imgCover {
